<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">NotePad</string>
    <string name="live_folder_name">Notes</string>

    <string name="title_edit_title">Note title:</string>
    <string name="title_create">New note</string>
    <string name="title_edit">Edit: %1$s</string>
    <string name="title_notes_list">Notes</string>

    <string name="menu_add">New note</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_open">Open</string>
    <string name="menu_revert">Revert changes</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_search">搜索</string>
    <string name="search_hint">输入标题或内容关键字</string>
    <string name="menu_exit">退出</string>
    <string name="menu_set_category">设置分类</string>
    <string name="menu_add_attachment">添加附件</string>
    <string name="menu_multi_select">多选</string>
    <string name="menu_apply_category">批量设置分类</string>
    <string name="menu_create_category">创建分类</string>
    <string name="menu_clear_category">批量清除分类</string>
    <string name="menu_exit_multi_select">退出多选</string>

    <string name="button_ok">OK</string>
    <string name="text_title">Title:</string>

    <string name="resolve_edit">Edit note</string>
    <string name="resolve_title">Edit title</string>

    <string name="error_title">Error</string>
    <string name="error_message">Error loading note</string>
    <string name="nothing_to_save">There is nothing to save</string>
    <string name="category_label">分类：%1$s</string>
    <string name="category_none">未设置</string>
    <string name="category_default">默认</string>
    <string name="attachments_label">附件：%1$s</string>
    <string name="attachments_none">无</string>
    <string name="dialog_category_title">设置分类</string>
    <string name="dialog_attachment_title">添加附件</string>
    <string name="hint_attachment_uri">输入附件 Uri（可使用文件或媒体 Uri）</string>
    <string name="attachment_type_image">图片</string>
    <string name="attachment_type_audio">音频</string>
    <string name="attachment_type_video">视频</string>
    <string name="toast_select_note_first">请先选择一条笔记</string>
    <string name="toast_no_selection">当前未选择任何笔记</string>
</resources>
