<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_add"

        android:icon="@android:drawable/ic_menu_add"

        android:title="@string/menu_add"
        android:alphabeticShortcut='a'
        android:showAsAction="always" />

    <item android:id="@+id/menu_paste"

        android:icon="@android:drawable/ic_menu_edit"

        android:title="@string/menu_paste"
        android:alphabeticShortcut='p' />

    <item
        android:id="@+id/menu_search"

        android:icon="@android:drawable/ic_menu_search"

        android:title="@string/menu_search"
        android:showAsAction="ifRoom|collapseActionView"

        android:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/menu_apply_category"
        android:title="@string/menu_set_category"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_create_category"
        android:title="@string/menu_create_category"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_category"
        android:title="@string/menu_clear_category"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_toggle_multi_select"
        android:title="@string/menu_multi_select"
        android:showAsAction="never" />
</menu>